# amlbot-agent

./: .gitignore  Caddyfile  Cases below (100K) for dev team for experiment.md  Dockerfile.api  README.md  docker-compose.remote.yml  docker-compose.yml  example.json  package-lock.json  package.json  payload_example.json  pyproject.toml  verify_flow.py
.github/workflows/: build-amlbot-agent.yml
docs/: LOCAL_SETUP.md  MULTI_AGENT_SYSTEM.md  README.md  ec2-deploy.md  openapi.yaml
docs/examples/: example-2.json  example-4.json  example-5.json  example-7.json  example.json
frontend/: Dockerfile.frontend  README.md  next.config.ts  package-lock.json  package.json
frontend/src/: auth.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/integrations/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: Chat.tsx  Login.tsx  MermaidDiagram.tsx
frontend/src/types/: next-auth.d.ts
frontend/src/utils/: auth.ts
src/: currencies.json  result  result.json  trace_diagram.md
src/agent/: __init__.py  api.py  base_tracer.py  classification.py  cli.py  client_protocol.py  config.py  deterministic_tracer.py  example-3.json  example-6.json  http_tracer.py  main.py  main_multi_agent.py  mcp_client.py  mcp_http_client.py  mcp_tracer.py  models.py  multi_agent_system.py  reporting.py  schema.json  theft_detection.py  trace_postprocess.py  tracer.py  verify_visualization.py  visualisation_schema.json  visualization.py
src/agent/prompts/: trace_hop_classifier.md  trace_hop_selector.md  trace_orchestrator.md  trace_selector.md  trace_validator.md
